Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-51890

qtwebengine fails to build with system nss 3.23

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.6.1
    • 5.6.0 RC, 5.6.0
    • WebEngine
    • None
    • Linux

      I'm trying to build qtwebengine-5.6.0 as a single module against a already installed qtbase and nss-3.23. I can avoid the build failure by chossing the bundled boringssl and only use nss for its certificates (which seems to be the default in newer versions of chromium).

      Here's the error (I've attached a longer log):

      [172/10186] x86_64-pc-linux-gnu-cc -MMD -MF obj/src/3rdparty/chromium/net/third_party/nss/ssl/libssl.ssl3ext.o.d -DV8_DEPRECATION_WAR
      NINGS -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -DNO_TCMALLOC -DCHROMIUM_BUILD -DUI_COMPOSITOR_IMAGE_TRANSPORT -DUSE_AURA=1 -DUSE_DEFAULT_R
      ENDER_THEME=1 -DUSE_X11=1 -DENABLE_ONE_CLICK_SIGNIN -DENABLE_PRE_SYNC_BACKUP -DENABLE_REMOTING=1 -DENABLE_WEBRTC=1 -DENABLE_MEDIA_ROU
      TER=1 -DENABLE_PEPPER_CDMS -DENABLE_CONFIGURATION_POLICY -DENABLE_NOTIFICATIONS -DENABLE_HIDPI=1 -DENABLE_TOPCHROME_MD=1 -DUSE_UDEV -
      DDONT_EMBED_BUILD_METADATA -DENABLE_TASK_MANAGER=1 -DENABLE_EXTENSIONS=1 -DENABLE_PLUGINS=1 -DENABLE_SESSION_SERVICE=1 -DENABLE_THEME
      S=1 -DENABLE_AUTOFILL_DIALOG=1 -DENABLE_BACKGROUND=1 -DENABLE_GOOGLE_NOW=1 -DCLD_VERSION=2 -DENABLE_SPELLCHECK=1 -DENABLE_CAPTIVE_POR
      TAL_DETECTION=1 -DENABLE_APP_LIST=1 -DENABLE_SETTINGS_APP=1 -DENABLE_SUPERVISED_USERS=1 -DENABLE_MDNS=1 -DENABLE_SERVICE_DISCOVERY=1 
      -DFULL_SAFE_BROWSING -DSAFE_BROWSING_CSD -DSAFE_BROWSING_DB_LOCAL -DSAFE_BROWSING_SERVICE -DNO_PKCS11_BYPASS -DNSS_ENABLE_ECC -DUSE_U
      TIL_DIRECTLY -DUSE_LIBPCI=1 -DUSE_GLIB=1 -DUSE_NSS_CERTS=1 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -Igen -I/var/tmp/palu
      dis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/bodge -I/usr
      /x86_64-pc-linux-gnu/include/libdrm -I/usr/x86_64-pc-linux-gnu/include/mysql -I/usr/x86_64-pc-linux-gnu/include/postgresql/server -fs
      tack-protector --param=ssp-buffer-size=4  -pthread -fno-strict-aliasing -Wno-unused-parameter -Wno-missing-field-initializers -fvisib
      ility=hidden -pipe -fPIC -Wno-unused-local-typedefs -I/usr/x86_64-pc-linux-gnu/include/nss -I/usr/x86_64-pc-linux-gnu/include/nspr -W
      no-format -Wno-unused-result -I/usr/x86_64-pc-linux-gnu/include/dbus-1.0 -I/usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -I/usr/x86_6
      4-pc-linux-gnu/include/dbus-1.0 -I/usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -m64 -march=x86-64 -O2 -fno-ident -fdata-sections -ff
      unction-sections -funwind-tables -march=native -pipe -O2 -march=native -pipe -O2  -c /var/tmp/paludis/build/x11-libs-qtwebengine-5.6.
      0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/ssl3ext.c -o obj/src/3rdparty/chromium/net/thir
      d_party/nss/ssl/libssl.ssl3ext.o
      FAILED: x86_64-pc-linux-gnu-cc -MMD -MF obj/src/3rdparty/chromium/net/third_party/nss/ssl/libssl.ssl3con.o.d -DV8_DEPRECATION_WARNING
      S -DTOOLKIT_QT -D_FILE_OFFSET_BITS=64 -DNO_TCMALLOC -DCHROMIUM_BUILD -DUI_COMPOSITOR_IMAGE_TRANSPORT -DUSE_AURA=1 -DUSE_DEFAULT_RENDE
      R_THEME=1 -DUSE_X11=1 -DENABLE_ONE_CLICK_SIGNIN -DENABLE_PRE_SYNC_BACKUP -DENABLE_REMOTING=1 -DENABLE_WEBRTC=1 -DENABLE_MEDIA_ROUTER=
      1 -DENABLE_PEPPER_CDMS -DENABLE_CONFIGURATION_POLICY -DENABLE_NOTIFICATIONS -DENABLE_HIDPI=1 -DENABLE_TOPCHROME_MD=1 -DUSE_UDEV -DDON
      T_EMBED_BUILD_METADATA -DENABLE_TASK_MANAGER=1 -DENABLE_EXTENSIONS=1 -DENABLE_PLUGINS=1 -DENABLE_SESSION_SERVICE=1 -DENABLE_THEMES=1 
      -DENABLE_AUTOFILL_DIALOG=1 -DENABLE_BACKGROUND=1 -DENABLE_GOOGLE_NOW=1 -DCLD_VERSION=2 -DENABLE_SPELLCHECK=1 -DENABLE_CAPTIVE_PORTAL_
      DETECTION=1 -DENABLE_APP_LIST=1 -DENABLE_SETTINGS_APP=1 -DENABLE_SUPERVISED_USERS=1 -DENABLE_MDNS=1 -DENABLE_SERVICE_DISCOVERY=1 -DFU
      LL_SAFE_BROWSING -DSAFE_BROWSING_CSD -DSAFE_BROWSING_DB_LOCAL -DSAFE_BROWSING_SERVICE -DNO_PKCS11_BYPASS -DNSS_ENABLE_ECC -DUSE_UTIL_
      DIRECTLY -DUSE_LIBPCI=1 -DUSE_GLIB=1 -DUSE_NSS_CERTS=1 -DNDEBUG -DNVALGRIND -DDYNAMIC_ANNOTATIONS_ENABLED=0 -Igen -I/var/tmp/paludis/
      build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/bodge -I/usr/x86
      _64-pc-linux-gnu/include/libdrm -I/usr/x86_64-pc-linux-gnu/include/mysql -I/usr/x86_64-pc-linux-gnu/include/postgresql/server -fstack
      -protector --param=ssp-buffer-size=4  -pthread -fno-strict-aliasing -Wno-unused-parameter -Wno-missing-field-initializers -fvisibilit
      y=hidden -pipe -fPIC -Wno-unused-local-typedefs -I/usr/x86_64-pc-linux-gnu/include/nss -I/usr/x86_64-pc-linux-gnu/include/nspr -Wno-f
      ormat -Wno-unused-result -I/usr/x86_64-pc-linux-gnu/include/dbus-1.0 -I/usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -I/usr/x86_64-pc
      -linux-gnu/include/dbus-1.0 -I/usr/x86_64-pc-linux-gnu/lib/dbus-1.0/include -m64 -march=x86-64 -O2 -fno-ident -fdata-sections -ffunct
      ion-sections -funwind-tables -march=native -pipe -O2 -march=native -pipe -O2  -c /var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/ssl3con.c -o obj/src/3rdparty/chromium/net/third_party/nss/ssl/libssl.ssl3con.o
      /var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/ssl3con.c: In function 'ssl3_ChaCha20Poly1305':
      /var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/ssl3con.c:2118:15: error: 'CK_NSS_AEAD_PARAMS {aka struct CK_NSS_AEAD_PARAMS}' has no member named 'pIv'
           aeadParams.pIv = (unsigned char *) additionalData;
                     ^
      /var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/3rdparty/chromium/net/third_party/nss/ssl/ssl3con.c:2119:15: error: 'CK_NSS_AEAD_PARAMS {aka struct CK_NSS_AEAD_PARAMS}' has no member named 'ulIvLen'
           aeadParams.ulIvLen = 8;
                     ^
      ninja: build stopped: subcommand failed.
      Makefile.gyp_run:593: recipe for target 'invoke_ninja' failed
      make[3]: Leaving directory '/var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/core'
      make[3]: *** [invoke_ninja] Error 1
      Makefile:116: recipe for target 'sub-gyp_run-pro-make_first' failed
      make[2]: *** [sub-gyp_run-pro-make_first] Error 2
      make[2]: Leaving directory '/var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src/core'
      Makefile:48: recipe for target 'sub-core-make_first' failed
      make[1]: *** [sub-core-make_first] Error 2
      make[1]: Leaving directory '/var/tmp/paludis/build/x11-libs-qtwebengine-5.6.0/work/qtwebengine-opensource-src-5.6.0/src'
      Makefile:44: recipe for target 'sub-src-make_first' failed
      make: *** [sub-src-make_first] Error 2
      

        1. qtwebengine-log.txt
          248 kB
          Heiko Becker
        For Gerrit Dashboard: QTBUG-51890
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            heirecka Heiko Becker
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes